<resources>
    <string name="app_name">Electronic Lab Notebook Mobile Application</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_biometric">BiometricActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_tools">Tools</string>
    <string name="title_todolist">Todo List</string>
    <string name="title_note">Note</string>
    <string name="title_alarm">Alarm</string>
    <string name="title_recorder">Recorder</string>
    <string name="title_timer">Timer</string>
    <string name="title_project">Project</string>
    <string name="title_experiment">Experiment</string>
    <string name="title_share_project">Share project</string>
    <string name="enable_biometric_login">Enable Biometric Login</string>
    <string name="desc_biometrics_authorization">Enter your email and password to confirm activation of biometric login.</string>
    <string name="exit">Exit</string>
    <string name="secret_key">secret_key</string>
    <string name="prompt_info_title">Biometric Authentication</string>
    <string name="prompt_info_subtitle">To get access please login</string>
    <string name="prompt_info_description">This application is using biometric authentication</string>
    <string name="prompt_info_use_app_password">Use app password</string>
    <string name="new_element">New Element</string>
    <string name="save">Save</string>
    <string name="save_file">Save to file</string>
    <string name="tasks">Your todos</string>
    <string name="tools">Tools</string>
    <string name="action_camera">Take picture</string>
    <string name="action_recorder">Record audio</string>
    <string name="action_note">Take note</string>
    <string name="action_alarm">Set alarm</string>
    <string name="action_timer">Timer</string>
    <string name="title_create_note">Create note</string>
    <string name="file_name_semicolon">File name:</string>
    <string name="text_semicolon">Text:</string>
    <string name="file_name">File name</string>
    <string name="text">Text</string>
    <string name="title_set_alarm">Set alarm</string>
    <string name="timer">Timer</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="audio_recorder">Audio recorder</string>
    <string name="record">Record audio</string>
    <string name="playback">Play recorded audio</string>
    <string name="projects">Your projects</string>
    <string name="profile">Profile</string>
    <string name="name_semicolon">Name: %1$s</string>
    <string name="email_semicolon">Email: %1$s</string>
    <string name="organization_semicolon">Organization: %1$s</string>
    <string name="project_semicolon">Project: %1$s</string>
    <string name="experiment_semicolon">Experiment: %1$s</string>
    <string name="add_user_to_project_semicolon">Add user to project: %1$s</string>
</resources>