<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.ui.tools.ToolsFragment">

    <TextView
        android:id="@+id/text_tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tools"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_camera"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/action_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_tools" />

    <Button
        android:id="@+id/button_voice_recorder"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/action_recorder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_camera" />

    <Button
        android:id="@+id/button_notes"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/action_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_voice_recorder" />

    <Button
        android:id="@+id/button_alarm"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/action_alarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_notes" />

    <Button
        android:id="@+id/button_timer"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/action_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_alarm" />
</androidx.constraintlayout.widget.ConstraintLayout>